syntax = "proto3";

package manager;

option go_package = "./pb";

message Version {
  string id = 1;
  Distribution distribution = 2;
  string url = 3;
  HashType hash_type = 4;
  bytes hash = 5;
  JavaVersion java_version = 6;
}

enum Distribution {
  PAPER = 0;
  VANILLA = 1;
}

enum HashType {
  HASH_NONE = 0;
  SHA1 = 1;
  SHA256 = 2;
  SHA512 = 3;
  SHA224 = 4;
  SHA384 = 5;
}

enum JavaVersion {
  JAVA_UNKNOWN = 0;
  JAVA8 = 8;
  JAVA11 = 11;
  JAVA17 = 17;
  JAVA21 = 21;
  JAVA24 = 24;
}

message DistributionGetLatestRequest {
  Distribution distribution = 1;
}

message DistributionGetVersionRequest {
  Distribution distribution = 1;
  string version_id = 2;
}

message DistributionGetAllRequest {
  Distribution distribution = 1;
}

message DistributionGetAllResponse {
  repeated string versions = 1;
}

service DistributionService {
  rpc GetLatest(DistributionGetLatestRequest) returns (Version);

  rpc GetVersion(DistributionGetVersionRequest) returns (Version);

  rpc GetAll(DistributionGetAllRequest) returns (DistributionGetAllResponse);
}
