syntax = "proto3";

package manager;

import "distribution.proto";
import "events.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "instance.proto";

option go_package = "./pb";

message RunningInstance {
  fixed64 id = 1;
  string container_id = 2;
  google.protobuf.Timestamp launched_at = 3;
  string name = 4;
  int32 players = 5;
  bool launched = 6;
  manager.Version version = 7;
  InstanceLimits limits = 8;
  InstanceConfig config = 9;
  InstanceState state = 10;
}

message RunnerGetByIdRequest {
  fixed64 id = 1;
}

message RunnerLaunchRequest {
  fixed64 id = 1;
  string name = 2;
  string version = 3;
  manager.Distribution version_distro = 4;
  InstanceLimits limits = 5;
  InstanceConfig config = 6;
}

message RunnerStopRequest {
  fixed64 id = 1;
  google.protobuf.Duration timeout = 2;
}

message RunnerListenRequest {
  fixed64 instance_id = 1;
  bool include_logs = 2;
}

message RunnerListenManyRequest {
  bool include_logs = 1;
  repeated fixed64 instances = 2;
}

message RunnerListenManyResponse {
  fixed64 instance_id = 1;
  Event event = 2;
}

service RunnerService {
  rpc GetById(RunnerGetByIdRequest) returns (RunningInstance);

  rpc Launch(RunnerLaunchRequest) returns (RunningInstance);

  rpc Stop(RunnerStopRequest) returns (RunningInstance);

  rpc Listen(RunnerListenRequest) returns (stream Event);

  rpc ListenMany(RunnerListenManyRequest) returns (stream RunnerListenManyResponse);
}
